[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Walls.gd" type="Script" id=1]
[ext_resource path="res://scenes/OneWall.tscn" type="PackedScene" id=2]

[node name="Walls" type="Node2D"]
script = ExtResource( 1 )

[node name="upwall" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -450 )

[node name="downwall" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 450 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="downwall"]
position = Vector2( 0, -450 )
[connection signal="game_over" from="upwall" to="." method="_on_upwall_game_over"]
[connection signal="game_over" from="downwall" to="." method="_on_downwall_game_over"]
[connection signal="screen_exited" from="downwall/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
